Time: 34 ms (57.81%), Space: 59.2 MB (45.29%) - LeetHub